--- a/airfreight.html
+++ b/airfreight.html
@@ -104,25 +104,6 @@ div.content {
   padding: 1px 16px;
 }
 
-/*@media screen and (max-width: 700px) {
-  .sidebar {
-    width: 100%;
-    height: auto;
-    position: relative;
-  }
-  .sidebar a {float: left;}
-  div.content {margin-left: 0;}
-}*/
-
-/*@media screen and (max-width: 400px) {
-  .sidebar a {
-    text-align: center;
-    float: none;
-  }
-}*/
-/*End Sidebar Nav*/
-
-
 .inner-banner{
     height: 400px;
     background: rgba(255, 255, 255, 0.5) url('assets/FREIGHT MANAGEMENT HOME.jpg') no-repeat 0 50%;
@@ -178,38 +159,35 @@ div.content {
 
       <div class="row row_one">
         <div class="col-md-5 col-sm-12 sidebar">
-          <a class="active" href="services.html">Ocean Freight <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
-          <a href="airfreight.html">Air Freight <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
+          <a  href="services.html">Ocean Freight <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
+          <a class="active" href="airfreight.html">Air Freight <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a href="importexport.html">Import/Export Services <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a href="transport.html">Transport Services <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
-          <a href="export.html">Export services <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
+          <a href="export.html">Export services<span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a href="insurance.html">Cargo Insurance<span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
         </div>
 
       <div class="ocean_freight" class="col-md-7 col-sm-12 content">
-        <h2>OCEAN FREIGHT</h2>
-        <p>Ascent offer a full range of ocean freight services direct with carrier as forwarder or as a NVOCC for any/all less-than-containerload (LCL), full-containerload (FCL), oversized and hazardous cargo, Roll-on/Roll-off (Ro/Ro) and more from any origin to any destination. </p>
+        <h2>AIR FREIGHT </h2>
+        <p>Through our extensive network of commercial and/or charter air carriers, we can provide the most effective and efficient routing for your air cargo, as well as direct passenger and freighter flights throughout international trade lanes. Nearly any size and type of cargo are accepted – from small parcel to large project cargo, hazardous cargo and more – and can be forwarded from any origin to any destination. </p>
 
-        <p>Full services include: </p>
+        <p>Air-freight services include:: </p>
 
         <ul>
-          <li>&nbsp;&nbsp;FCL</li>
-          <li>&nbsp;&nbsp;LCL</li>
-          <li>&nbsp;&nbsp;Breakbulk, heavy-lift, over-dimensional</li> 
-          <li>&nbsp;&nbsp;Project cargo</li>
-          <li>&nbsp;&nbsp;Consolidations</li>
-          <li>&nbsp;&nbsp;Charter/part-charter</li> 
-          <li>&nbsp;&nbsp;Multimodal solutions, including sea/air or air/sea</li>
-          <li>&nbsp;&nbsp;Container sales</li>
-          <li>&nbsp;&nbsp;Barge services</li>
-          <li>&nbsp;&nbsp;Marine surveys</li>
-          <li>&nbsp;&nbsp;24/7/365 staff availability</li>
+          <li>&nbsp;&nbsp;24/7 staff availability</li>
+          <li>&nbsp;&nbsp;Emergency hand-carry services </li>
+          <li>&nbsp;&nbsp;Aircraft charters</li> 
           <li>&nbsp;&nbsp;Door-to-door deliveries</li>
-          <li>&nbsp;&nbsp;Complete documentation preparation</li>
-          <li>&nbsp;&nbsp;Cargo marine insurance</li>
-          <li>&nbsp;&nbsp;Hazardous materials</li>
-          <li>&nbsp;&nbsp;Purchase order (P.O.) management</li>
-          <li>&nbsp;&nbsp;Web-based, in-transit visibility</li> 
+          <li>&nbsp;&nbsp;Complete documentation preparation, including on-site notaries and chambers</li>
+          <li>&nbsp;&nbsp;Heavy-lift, over-dimensional </li> 
+          <li>&nbsp;&nbsp;Project cargo </li>
+          <li>&nbsp;&nbsp;Letter of credit services </li>
+          <li>&nbsp;&nbsp;Cargo marine insurance </li>
+          <li>&nbsp;&nbsp;Multimodal solutions, including sea/air or air/sea </li>
+          <li>&nbsp;&nbsp;Hazardous materials </li>
+          <li>&nbsp;&nbsp;Purchase order (P.O.) management </li>
+          <li>&nbsp;&nbsp;Expedited services </li>
+          <li>&nbsp;&nbsp;Web-based, in-transit visibility </li>
         </ul>
        
       </div>
