--- a/factoryrelocation.html
+++ b/factoryrelocation.html
@@ -26,7 +26,7 @@
   .ocean_freight{
     padding:30px 40px 30px 0;
     font-size: 20px;
-    font-family: 'Domine', serif;
+     font-family: 'Domine', serif;
   }
 
   .ocean_freight h2{
@@ -177,41 +177,34 @@ div.content {
       </section>
 
       <div class="row row_one">
-        <div class="col-md-5 col-sm-12 sidebar">
-          <a class="active" href="services.html">Ocean Freight <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
-          <a href="airfreight.html">Air Freight <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
-          <a href="importexport.html">Import/Export Services <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
-          <a href="transport.html">Transport Services <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
-          <a href="export.html">Export services <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
-          <a href="insurance.html">Cargo Insurance<span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
+        <div class="col-md-5 col-sm-12 sidebar" >
+          <a href="specialequipment.html">Special Equipment <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
+          <a href="linearservice.html">Break Bulk Loading on Liner service <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
+          <a href="heavylift.html">Break bulk and Heavy lift  <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
+          <a href="operations.html">RO RO Operations <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
+          <a class="active" href="factoryrelocation.html">Machinery and factory relocation <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
+          <a href="eventlogistic.html">Event Logistics <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
         </div>
 
-      <div class="ocean_freight" class="col-md-7 col-sm-12 content">
-        <h2>OCEAN FREIGHT</h2>
-        <p>Ascent offer a full range of ocean freight services direct with carrier as forwarder or as a NVOCC for any/all less-than-containerload (LCL), full-containerload (FCL), oversized and hazardous cargo, Roll-on/Roll-off (Ro/Ro) and more from any origin to any destination. </p>
-
-        <p>Full services include: </p>
-
+      <div class="col-md-7 col-sm-12 content ocean_freight" class="">
+        <h2>Machinery and factory relocation </h2>
+        <p>Ascent offers safe, professional installation/relocation of factory machinery. This process starts with a consultation and carries through to commissioning. Our team will work with you to understand your goal, timeline, and budget and develop a complete project plan.  We then provide you with a detailed quote and set clear expectations. Once the work begins Ascent’s experienced tradesmen will take care of it all.  We partner with well experienced vendors for transporting machines, full site relocations, original equipment manufacturers and end-users in any of industries taking total responsibility for ensuring the success of any project we undertake. 
+        </p>
+        <p>Service includes.  </p>
         <ul>
-          <li>&nbsp;&nbsp;FCL</li>
-          <li>&nbsp;&nbsp;LCL</li>
-          <li>&nbsp;&nbsp;Breakbulk, heavy-lift, over-dimensional</li> 
-          <li>&nbsp;&nbsp;Project cargo</li>
-          <li>&nbsp;&nbsp;Consolidations</li>
-          <li>&nbsp;&nbsp;Charter/part-charter</li> 
-          <li>&nbsp;&nbsp;Multimodal solutions, including sea/air or air/sea</li>
-          <li>&nbsp;&nbsp;Container sales</li>
-          <li>&nbsp;&nbsp;Barge services</li>
-          <li>&nbsp;&nbsp;Marine surveys</li>
-          <li>&nbsp;&nbsp;24/7/365 staff availability</li>
-          <li>&nbsp;&nbsp;Door-to-door deliveries</li>
-          <li>&nbsp;&nbsp;Complete documentation preparation</li>
-          <li>&nbsp;&nbsp;Cargo marine insurance</li>
-          <li>&nbsp;&nbsp;Hazardous materials</li>
-          <li>&nbsp;&nbsp;Purchase order (P.O.) management</li>
-          <li>&nbsp;&nbsp;Web-based, in-transit visibility</li> 
+          <li>&nbsp;&nbsp;Full site survey </li>
+          <li>&nbsp;&nbsp;Detailed plans and schedule for all machine moves</li>
+          <li>&nbsp;&nbsp;Commissioning and decommissioning</li> 
+          <li>&nbsp;&nbsp;Method statements and risk assessments</li>
+          <li>&nbsp;&nbsp;Decontamination</li>
+          <li>&nbsp;&nbsp;Export packing and air, sea and road freight </li>
+          <li>&nbsp;&nbsp;Machinery removals and installations</li>
+          <li>&nbsp;&nbsp;On-site supervision and Project Management</li>
+          <li>&nbsp;&nbsp;CE testing</li>
+          <li>&nbsp;&nbsp;Equipment modification and upgrades</li>
+          <li>&nbsp;&nbsp;Mechanical & Electrical equipment services</li>
         </ul>
-       
+
       </div>
     </div>
 
