--- a/insurance.html
+++ b/insurance.html
@@ -26,7 +26,7 @@
   .ocean_freight{
     padding:30px 40px 30px 0;
     font-size: 20px;
-    font-family: 'Domine', serif;
+     font-family: 'Domine', serif;
   }
 
   .ocean_freight h2{
@@ -178,38 +178,29 @@ div.content {
 
       <div class="row row_one">
         <div class="col-md-5 col-sm-12 sidebar">
-          <a class="active" href="services.html">Ocean Freight <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
+          <a  href="services.html">Ocean Freight <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a href="airfreight.html">Air Freight <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a href="importexport.html">Import/Export Services <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
-          <a href="transport.html">Transport Services <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
-          <a href="export.html">Export services <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
-          <a href="insurance.html">Cargo Insurance<span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
+          <a  href="transport.html">Transport Services <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
+          <a href="export.html">Export services<span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
+          <a  class="active" href="insurance.html">Cargo Insurance<span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
         </div>
 
       <div class="ocean_freight" class="col-md-7 col-sm-12 content">
-        <h2>OCEAN FREIGHT</h2>
-        <p>Ascent offer a full range of ocean freight services direct with carrier as forwarder or as a NVOCC for any/all less-than-containerload (LCL), full-containerload (FCL), oversized and hazardous cargo, Roll-on/Roll-off (Ro/Ro) and more from any origin to any destination. </p>
-
-        <p>Full services include: </p>
+        <h2>CARGO INSURANCE</h2>
+        <p>Uncertainty is common in all industry, our comprehensive cargo insurance helps you cover both loss or damage of cargo on all modes of transportation.  </p>
 
         <ul>
-          <li>&nbsp;&nbsp;FCL</li>
-          <li>&nbsp;&nbsp;LCL</li>
-          <li>&nbsp;&nbsp;Breakbulk, heavy-lift, over-dimensional</li> 
-          <li>&nbsp;&nbsp;Project cargo</li>
-          <li>&nbsp;&nbsp;Consolidations</li>
-          <li>&nbsp;&nbsp;Charter/part-charter</li> 
-          <li>&nbsp;&nbsp;Multimodal solutions, including sea/air or air/sea</li>
-          <li>&nbsp;&nbsp;Container sales</li>
-          <li>&nbsp;&nbsp;Barge services</li>
-          <li>&nbsp;&nbsp;Marine surveys</li>
-          <li>&nbsp;&nbsp;24/7/365 staff availability</li>
-          <li>&nbsp;&nbsp;Door-to-door deliveries</li>
-          <li>&nbsp;&nbsp;Complete documentation preparation</li>
-          <li>&nbsp;&nbsp;Cargo marine insurance</li>
-          <li>&nbsp;&nbsp;Hazardous materials</li>
-          <li>&nbsp;&nbsp;Purchase order (P.O.) management</li>
-          <li>&nbsp;&nbsp;Web-based, in-transit visibility</li> 
+          <li>&nbsp;&nbsp;"All Risk" cargo and marine insurance</li>
+          <li>&nbsp;&nbsp;Auto transportation</li>
+          <li>&nbsp;&nbsp;Live stock transportation</li> 
+          <li>&nbsp;&nbsp;High value goods and fine art transport</li>
+          <li>&nbsp;&nbsp;Household Goods and personal effect transportation</li>
+          <li>&nbsp;&nbsp;3rd party liability coverage</li> 
+          <li>&nbsp;&nbsp;E&O coverage</li>
+          <li>&nbsp;&nbsp;Professional liability coverage</li>
+          <li>&nbsp;&nbsp;Professional cargo surveying</li>
+          <li>&nbsp;&nbsp;Pre shipment inspection</li>
         </ul>
        
       </div>
