--- a/linearservice.html
+++ b/linearservice.html
@@ -26,7 +26,7 @@
   .ocean_freight{
     padding:30px 40px 30px 0;
     font-size: 20px;
-    font-family: 'Domine', serif;
+     font-family: 'Domine', serif;
   }
 
   .ocean_freight h2{
@@ -177,41 +177,20 @@ div.content {
       </section>
 
       <div class="row row_one">
-        <div class="col-md-5 col-sm-12 sidebar">
-          <a class="active" href="services.html">Ocean Freight <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
-          <a href="airfreight.html">Air Freight <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
-          <a href="importexport.html">Import/Export Services <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
-          <a href="transport.html">Transport Services <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
-          <a href="export.html">Export services <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
-          <a href="insurance.html">Cargo Insurance<span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
+        <div class="col-md-5 col-sm-12 sidebar" >
+          <a href="specialequipment.html">Special Equipment <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
+          <a class="active" href="linearservice.html">Break Bulk Loading on Liner service <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
+          <a href="heavylift.html">Break bulk and Heavy lift  <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
+          <a href="operations.html">RO RO Operations <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
+          <a href="factoryrelocation.html">Machinery and factory relocation <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
+          <a href="eventlogistic.html">Event Logistics <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
         </div>
 
-      <div class="ocean_freight" class="col-md-7 col-sm-12 content">
-        <h2>OCEAN FREIGHT</h2>
-        <p>Ascent offer a full range of ocean freight services direct with carrier as forwarder or as a NVOCC for any/all less-than-containerload (LCL), full-containerload (FCL), oversized and hazardous cargo, Roll-on/Roll-off (Ro/Ro) and more from any origin to any destination. </p>
+      <div class="col-md-7 col-sm-12 content ocean_freight" class="">
+        <h2>Break Bulk Loading on Liner service.  </h2>
+        <p>Ascent is specialised in carry out Breakbulk operation in regular liner service, based on cargo size and weight flat racks are placed on vessel deck before loading, and cargo will be loaded using port cranes while Lashing team will be ready with Equipments and materials to do safe lashing 
+        </p>
 
-        <p>Full services include: </p>
-
-        <ul>
-          <li>&nbsp;&nbsp;FCL</li>
-          <li>&nbsp;&nbsp;LCL</li>
-          <li>&nbsp;&nbsp;Breakbulk, heavy-lift, over-dimensional</li> 
-          <li>&nbsp;&nbsp;Project cargo</li>
-          <li>&nbsp;&nbsp;Consolidations</li>
-          <li>&nbsp;&nbsp;Charter/part-charter</li> 
-          <li>&nbsp;&nbsp;Multimodal solutions, including sea/air or air/sea</li>
-          <li>&nbsp;&nbsp;Container sales</li>
-          <li>&nbsp;&nbsp;Barge services</li>
-          <li>&nbsp;&nbsp;Marine surveys</li>
-          <li>&nbsp;&nbsp;24/7/365 staff availability</li>
-          <li>&nbsp;&nbsp;Door-to-door deliveries</li>
-          <li>&nbsp;&nbsp;Complete documentation preparation</li>
-          <li>&nbsp;&nbsp;Cargo marine insurance</li>
-          <li>&nbsp;&nbsp;Hazardous materials</li>
-          <li>&nbsp;&nbsp;Purchase order (P.O.) management</li>
-          <li>&nbsp;&nbsp;Web-based, in-transit visibility</li> 
-        </ul>
-       
       </div>
     </div>
 
