--- a/transport.html
+++ b/transport.html
@@ -178,38 +178,33 @@ div.content {
 
       <div class="row row_one">
         <div class="col-md-5 col-sm-12 sidebar">
-          <a class="active" href="services.html">Ocean Freight <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
+          <a  href="services.html">Ocean Freight <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a href="airfreight.html">Air Freight <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a href="importexport.html">Import/Export Services <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
-          <a href="transport.html">Transport Services <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
-          <a href="export.html">Export services <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
+          <a class="active" href="transport.html">Transport Services <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
+          <a href="export.html">Export services<span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a href="insurance.html">Cargo Insurance<span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
         </div>
 
       <div class="ocean_freight" class="col-md-7 col-sm-12 content">
-        <h2>OCEAN FREIGHT</h2>
-        <p>Ascent offer a full range of ocean freight services direct with carrier as forwarder or as a NVOCC for any/all less-than-containerload (LCL), full-containerload (FCL), oversized and hazardous cargo, Roll-on/Roll-off (Ro/Ro) and more from any origin to any destination. </p>
+        <h2>TRANSPORT SERVICES</h2>
+        <p>Ascent excels pick up and Drop service worldwide for containerised and, Over dimension Movement, with vehicles available 24/7 in all our locations and agent locations, Rail movements interstate, ounties or even inter continent, for any cargo size from small box to Mega Equipments.    </p>
 
-        <p>Full services include: </p>
+       <!--  <p>Full services include: </p> -->
 
         <ul>
-          <li>&nbsp;&nbsp;FCL</li>
-          <li>&nbsp;&nbsp;LCL</li>
-          <li>&nbsp;&nbsp;Breakbulk, heavy-lift, over-dimensional</li> 
-          <li>&nbsp;&nbsp;Project cargo</li>
-          <li>&nbsp;&nbsp;Consolidations</li>
-          <li>&nbsp;&nbsp;Charter/part-charter</li> 
-          <li>&nbsp;&nbsp;Multimodal solutions, including sea/air or air/sea</li>
-          <li>&nbsp;&nbsp;Container sales</li>
-          <li>&nbsp;&nbsp;Barge services</li>
-          <li>&nbsp;&nbsp;Marine surveys</li>
-          <li>&nbsp;&nbsp;24/7/365 staff availability</li>
-          <li>&nbsp;&nbsp;Door-to-door deliveries</li>
-          <li>&nbsp;&nbsp;Complete documentation preparation</li>
-          <li>&nbsp;&nbsp;Cargo marine insurance</li>
-          <li>&nbsp;&nbsp;Hazardous materials</li>
-          <li>&nbsp;&nbsp;Purchase order (P.O.) management</li>
-          <li>&nbsp;&nbsp;Web-based, in-transit visibility</li> 
+          <li>&nbsp;&nbsp;One source for all of your worldwide transportation needs</li>
+          <li>&nbsp;&nbsp;Offering individual or integrated services </li>
+          <li>&nbsp;&nbsp;Shipment visibility and materials tracking capability Our service covers. </li> 
+          <li>&nbsp;&nbsp;Small Parcel Pick-up and delivery</li>
+          <li>&nbsp;&nbsp;Container Pick-up and delivery </li>
+          <li>&nbsp;&nbsp;High bed, Low Bed and Semi Low Bed Movement</li> 
+          <li>&nbsp;&nbsp;ODC Movement </li>
+          <li>&nbsp;&nbsp;Rail and road combo</li>
+          <li>&nbsp;&nbsp;Inter country/Continents</li>
+          <li>&nbsp;&nbsp;Temperature Controlled movement </li>
+          <li>&nbsp;&nbsp;Escort for Cargo Services </li>
+          <li>&nbsp;&nbsp;Armed Escort for critical locations</li>
         </ul>
        
       </div>
